# first_jni

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/firstjniproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/firstjniproject/: Bean.java  MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/firstjniproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
